third_party/move/move-compiler-v2/tests/cmp-rewrite/lt.v2.1.exp

Diagnostics:
error: cannot use `T` with an operator which expects a value of type `integer`
  ┌─ tests/cmp-rewrite/lt.move:3:9
  │
3 │         x < y
  │         ^
